# cfn-risk-mapper

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  scan.sh
fixtures/: sample.json  sample.yaml
fixtures/multi_stack/: network.json  storage.json
src/cfn_risk_mapper/: __init__.py  cli.py  compliance_mapper.py  detector.py  graph_builder.py  report_generator.py  scorer.py
src/cfn_risk_mapper/data/: nist_800_53_mappings.yaml
src/cfn_risk_mapper/templates/: report.md.j2
tests/: test_cli.py  test_compliance_mapper.py  test_detector.py  test_graph_builder.py  test_report_generator.py  test_scorer.py
