[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfn-risk-mapper"
version = "0.1.0"
description = "Prioritizes CloudFormation security findings by declared exposure and maps them to NIST 800-53 controls."
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "networkx>=3.2",
    "rich>=13.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "cfn-flip>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cfn-risk-mapper = "cfn_risk_mapper.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cfn_risk_mapper"]
